src/resources/postcss/events-admin.pcss
/* ... */
/* Apply a grey highlight to 'today' */
.ui-datepicker-calendar .ui-datepicker-today {
	a {
		background: linear-gradient(354deg, #ccc 0%, #eee 100%);
		color: black;
	}

	/* If today is also the current selected day, prefer the default blue highlight */
	&.ui-datepicker-current-day a {
		background: linear-gradient(354deg, rgba(10, 85, 160, 1) 0%, rgba(18, 136, 235, 1) 100%);
		color: #fff;
	}
}

.ui-datepicker select.ui-datepicker-month {
	width: 8rem;
}

.tribe-community-event-info {
	margin: 10px;
	width: 100%;
}

.eventtable,
#EventInfo {
	margin: 0;
	padding-top: 0;
	width: 100%;
}

#event_tickets,
.eventtable.ticket_list.eventForm {
	table-layout: fixed;
}

#ticket_start_date,
#ticket_end_date {
	width: 100px;
}

.form-table form input {
	border: none;
}

#submitLabel {
	display: block;

	input {
		display: block;
		padding: 0;
	}
}

#EventBriteDetailDiv h4,
.tribe-community-event-info h4,
.eventForm .tribe_sectionheader h4 {
	border-bottom: 1px solid #e5e5e5;
	padding-bottom: 6px;
	text-transform: uppercase;
}

.tribe-events-error {
	display: none;
}

.tribe-events-multi-event-day {
	color: #0f81bb;
}

.ui-front {
	z-index: 1000000;
}

.events-cal .ui-widget-overlay.ui-front {
	z-index: 90;
}

.edit-linked-post-link {
	display: inline-block;
	margin-left: 10px;
}

.linked-post-wrapper {
	tbody + tbody tr:first-child td {
		padding-top: var(--tec-spacer-4);
	}

	tbody + tbody tr.saved_linked-post td,
	tbody + tfoot tr td {
		margin-top: 1em;
		padding-top: 1em;
	}

	.tec-linked-post__map-options label {
		display: block;
		margin-bottom: var(--tec-spacer-1);
	}

	.tec-linked-post__map-options .tribe-table-field-label {
		vertical-align: top;
	}

	.linked-post td:first-child {
		padding-left: 30px;
	}
}

.move-linked-post-group {
	cursor: move;
	padding-right: 0.5em;
}

.tribe-delete-this {
	color: #444;
	float: right;

	&:hover,
	&.hover-state {
		color: #a00;
	}

	&.tribe-confirm-delete-this {
		display: none;
	}
}

.tribe_community_edit {
	.edit-linked-post-link {
		a {
			display: none;
		}
	}
}

.tribe-linked-post-error.error {
	display: inline;
	margin-left: 5px;
	padding: 5px 10px;
}

/* = Settings
============================================= */
#tribe-field-toggle_blocks_editor_hidden_field {
	display: none;
}

/* Donate link - remove if/when we move this.
============================================= */
#tribe-field-donate-link legend {
	float: left;
	font-weight: bold;
	margin-right: 1em;
}

/* upgrades */
#modern-tribe-info.tribe-upgrade,
.tec-settings-header.tribe-upgrade {
	padding: 0;
	position: relative;

	a,
	.dashicons {
		color: #334aff;
	}

	h3 {
		font-size: 24px;
		line-height: 1.4em;
	}

	ul {
		list-style-type: none;
		margin-left: 0;
	}

	li {

		& > h4 {
			margin-bottom: 0;
		}

		& > p {
			margin-top: 0;
			padding-left: 1.5rem;
		}
	}

	#tribe-upgrade-step1,
	#tribe-upgrade-step2,
	#tribe-upgrade-complete {
		display: flex;
		flex-direction: row;
		justify-content: space-between;

		&.hidden {
			display: none;
		}

		@media (--not-phone) {
			.tribe-upgrade-absolute-text {
				bottom: 80px;
				position: absolute;
				white-space: nowrap;
				word-wrap: break-word;
			}
		}

		@media (--phone) {
			.tribe-upgrade-absolute-text {
				display: block;
				margin: 15px 10px;
			}
		}
	}

	#tribe-upgrade-step1 {
		span {
			color: #334aff;
		}
	}

	.button,
	button {
		background: #334aff;
		border: 0;
		border-radius: 0.25rem;
		box-shadow: 0 2px black;
		color: white;
		cursor: pointer;
		font-size: 1rem;
		line-height: 1.2;
		margin: 2rem 1.5rem 0.25rem 0.25rem;
		padding: 1rem 0.5rem;
		text-decoration: none;
		white-space: nowrap;
		width: 200px;
	}

	.button {
		height: 3rem;
		line-height: 1rem;
		text-align: center;
	}

	.content-container {
		max-width: 600px;
		padding: 2rem;
	}

	.image-container {
		text-align: right;

		img {
			border-radius: 0.5rem;
			display: inline-block;
			filter: drop-shadow(0 0 6px #ccc);
			height: auto;
			margin: 0;
			vertical-align: top;
			width: 100%;
		}
	}

	.screenshot {
		float: left;
	}

	.step {
		font-size: 0.9rem;
		font-weight: 200;
		padding-top: 0.5rem;
		text-align: center;
		width: 200px;
	}
}

.tribe-settings-form {
	.tec-settings-display,
	.tec-settings-general {
		.tribe-field-indent {
			margin-left: 255px;
		}

		fieldset .description {
			padding-left: 0;
		}

		.tribe-field-wrap input[type="checkbox"] ~ .description {
			display: inline-block;
			margin-top: 0;
		}

		.tribe-field-wrap input[type="checkbox"] {
			margin-top: 2px !important;
			vertical-align: top;
		}
	}

	.tribe-settings-form-wrap .tec-settings-infobox {
		background-color: #fff;
		border: 1px solid #d5d5d5;
		border-radius: 4px;
		column-gap: 20px;
		display: grid;
		grid-template-columns: auto 1fr;
		margin: 10px 0;
		padding: 20px;

		> * {
			grid-column: 1;
			padding-left: 0;
		}

		.tec-settings-infobox-logo ~ * {
			grid-column: 2;
			margin-left: 0;
		}

		.tec-settings-infobox-logo {
			grid-column: 1;
			grid-row: 1 / 10;
			width: 48px;
		}

		.tec-settings-infobox-title {
			background: transparent;
			margin-top: 0;
			padding: 0;
		}
	}
}

.tec-settings-header {
	.tec-settings-header-links-section {
		display: flex;
		flex-flow: row wrap;

		ul {
			list-style: none;
			margin-left: 0;
		}

		> * {
			flex-grow: 1;
		}

		.tec-settings-header-links-section__donate {
			display: flex;
			flex-basis: 50%;
			flex-flow: column;
			margin-right: 115px;
			max-width: 360px;
		}
	}
}

#upgrade-button {
	background: #334aff;
	border: 0;
	border-radius: 0.25rem;
	box-shadow: 0 2px black;
	color: white;
	cursor: pointer;
	font-size: 0.8rem;
	height: 1.6rem;
	margin: 2px 0 0 0.75rem;
	padding-right: 0.8rem;
	vertical-align: top;
}

/* = Eventbrite
============================================= */
.tribe-community-event-info small,
#EventBriteDetailDiv small {
	color: #a3a3a3;
	font-size: 10px;
}
/* ... */

